<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.EntryActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/entry_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_overlay">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            fab:fab_addButtonColorNormal="@color/colorAccent"
            fab:fab_addButtonColorPressed="@color/half_black"
            fab:fab_addButtonPlusIconColor="@color/white"
            fab:fab_addButtonStrokeVisible="true"
            fab:fab_labelStyle="@style/menu_labels_style"
            fab:fab_labelsPosition="left">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/half_black"
                fab:fab_colorPressed="@color/colorAccent"
                fab:fab_icon="@drawable/ic_list_24dp"
                fab:fab_plusIconColor="@color/white"
                fab:fab_size="normal"
                fab:fab_title="@string/list" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/half_black"
                fab:fab_colorPressed="@color/black"
                fab:fab_icon="@drawable/ic_set_24dp"
                fab:fab_plusIconColor="@color/colorAccent"
                fab:fab_size="normal"
                fab:fab_title="@string/set" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/half_black"
                fab:fab_colorPressed="@color/colorAccent"
                fab:fab_icon="@drawable/ic_dictionary_24dp"
                fab:fab_plusIconColor="@color/white"
                fab:fab_size="normal"
                fab:fab_title="@string/dictionary" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>
